# qr-finder

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: reader.py
