[tool.poetry]
name = "qr-finder"
version = "0.1.0"
description = ""
authors = ["manhpt <manhhailua@gmail.com>"]
readme = "README.md"
packages = [{include = "qr_finder"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyzbar = "^0.1.9"
numpy = "^1.26.4"
streamlit = "^1.35.0"
opencv-python-headless = "^4.10.0.84"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.8.0"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
